<resources>
    <string name="app_name">nojom Brand</string>
    <string name="map_api_key" translatable="false">AIzaSyD3al5izK-SjpDu8o1PKcsP2tOp8LY4h08</string>
    <string name="facebook_client_token" translatable="false">e69ab5f0ffc4b634937fb5370969b0db</string>
    <string name="facebook_app_id" translatable="false">2521097948008550</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2521097948008550</string>
    <string name="sftext_regular" translatable="false">font/sanfrancisco_text_regular.otf</string>
    <string name="sftext_medium" translatable="false">font/sanfrancisco_text_medium.otf</string>
    <string name="sftext_bold" translatable="false">font/sanfrancisco_text_bold.otf</string>
    <string name="sftext_semibold" translatable="false">font/sanfrancisco_text_semibold.otf</string>
    <string name="sfdiaply_bold" translatable="false">font/sf_pro_display_bold.otf</string>
    <string name="sfdiaply_regular" translatable="false">font/sf_pro_display_regular.otf</string>
    <string name="sf_protext_regular" translatable="false">font/sf_pro_text_regular.otf</string>
    <string name="sf_protext_medium" translatable="false">font/sf_pro_text_medium.otf</string>
    <string name="sf_protext_semibold" translatable="false">font/sf_pro_text_semibold.otf</string>
    <string name="sf_protext_bold" translatable="false">font/sf_pro_text_bold.otf</string>
    <string name="deadline">Deadline</string>
    <string name="chat_now">Chat Now</string>
    <string name="we_are_online_24_7">We are online 24/7</string>
    <string name="we_are_online_now">We are online now</string>
    <string name="chat_text">We are available 24/7. Click on the top-right button to chat with us immediately via WhatsApp, Email, SMS…</string>
    <string name="chat_now_here">Chat Now Here</string>
    <string name="go_to_whatsapp">Go to WhatsApp</string>
    <string name="go_to_messenger">Go to Messenger</string>
    <string name="something_went_wrong">Something went to wrong</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="read_more">Read more</string>
    <string name="offer_details">Apply for free trial</string>
    <string name="total">Total</string>
    <string name="call">Call</string>
    <string name="messenger">Messenger</string>
    <string name="messanger_text">messenger.com/t/nojom</string>
    <string name="phone_number">+966 55 663 3344</string>
    <string name="phone_number_demo">512345678</string>
    <string name="phonenumber">Phone number</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="email">Email</string>
    <string name="email_1">Email</string>
    <string name="email_address">Email address</string>
    <string name="email_text">support@nojom.com</string>
    <string name="sms">SMS</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_1">Cancel</string>
    <string name="cancel_2">Cancel</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Login</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pw_text">Type your email to reset your password</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="refunded">Refunded</string>
    <string name="apply">Apply</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="chat">Chat</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="change">Change</string>
    <string name="update_password">Update password</string>
    <string name="enter_your_old_password">Enter your current password</string>
    <string name="enter_confirm_password">Confirm your new password</string>
    <string name="doesnt_match_password">Your new password doesn\'t match with confirm password</string>
    <string name="same_password">Your old and new passwords are the same</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="send">Send</string>
    <string name="feedback_text">Your ideas, issues, feedbacks, complaints, and even compliments too!</string>
    <string name="english">English</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="discount">Discount</string>
    <string name="discount_1">Discount</string>
    <string name="redeem">Redeem</string>
    <string name="return_">Return</string>
    <string name="return_1">Return</string>
    <string name="status">Status</string>
    <string name="status_1">Status</string>
    <string name="rate">Rate</string>
    <string name="files">Files</string>
    <string name="payment">Payment</string>
    <string name="payment_1">Payment</string>
    <string name="pay">Pay</string>
    <string name="paid">Paid</string>
    <string name="paid_2">Paid</string>
    <string name="payment_details">Payment Details</string>
    <string name="view">View</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="camera_photo_galley">Camera &amp; Photo Library</string>
    <string name="video_library">Video Library</string>
    <string name="document">Document</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="website">Website</string>
    <string name="about_us">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="services">Services</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="search_for">Search for %1$s</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_project_text">Are you sure you want to <b>Delete</b> this campaign?</string>
    <string name="delete_account_text">Are you sure you want to <b>Delete</b> this account</string>
    <string name="delete_card_text">Are you sure you want to <b>Delete</b> this card?</string>
    <string name="home">Home</string>
    <string name="hire">collaborate</string>
    <string name="pricing">Pricing</string>
    <string name="why_us">Why us?</string>
    <string name="how_it_works">How it works</string>
    <string name="see_how_it_works"><u>See how it works</u></string>
    <string name="more">More</string>
    <string name="how_it_works_">How it works</string>
    <string name="what_do_you_need">Field</string>
    <string name="our_service">Our Service</string>
    <string name="address_text">3rd Flr. Dra. Lazo Bldg., Diego Liñan St. cor. Bagasbas Rd.,Barangay VII, Poblacion, Daet, Camarines Norte, Philippines 4600</string>
    <string name="thankyou_text">Your application for freetrial has been sent.</string>
    <string name="contact_us">Contact Us</string>
    <string name="want_to_hire">I want to connect with the stars</string>
    <string name="want_to_work">I am looking for campaigns</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="username">Username</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_new_paypal">Add New Paypal Account</string>
    <string name="add_card_">Add Card</string>
    <string name="add_card_1">Add Card</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="expiry">Expiry</string>
    <string name="last_name">Last Name</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip code</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="cvv">CVV</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="card_number">Card Number</string>
    <string name="delete_card">Delete this card</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="setting">Settings</string>
    <string name="get_100_discount">Get $100 Discount</string>
    <string name="what_we_do">What we do</string>
    <string name="your_profile_is">Your Profile is %1$s</string>
    <string name="complete_your_profile">Complete your Profile</string>
    <string name="percent_complete">%1$s complete</string>
    <string name="private_info">Private Info</string>
    <string name="skills">Skills</string>
    <string name="portfolio">Portfolio</string>
    <string name="work_with_1">Work with</string>
    <string name="availability">Availability</string>
    <string name="verifications">Verifications</string>
    <string name="type_of_work">Type of collaboration</string>
    <string name="my_skills">My skills</string>
    <string name="security_code">Security Code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="post_job">Post your campaign</string>
    <string name="release_payment_text">Release the deposit and make the paymnet once your campaign is submitted by the star.</string>
    <string name="no_available_jobs_desc">All available campaigns will be displayed here.</string>
    <string name="no_proposals">No Proposals</string>
    <string name="ok">OK</string>
    <string name="add_cvv">Add CVV</string>
    <string name="require_cvv_to_payment">Require CVV to payment</string>
    <string name="please_enter_cvv">Please enter cvv</string>
    <string name="enjoying_influencerbird_client">Are you enjoying nojom Client?</string>
    <string name="tap_a_start_to_rate_it_on_the_play_store">Tap on star to rate it on the Play Store.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate_now">Rate now</string>
    <string name="release_payment">Release Payment?</string>
    <string name="release_and_pay">Release and Pay</string>
    <string name="once_payment_is_released_payment_is_non_refundable">Once payment is released, payment is non-refundable.</string>
    <string name="customer_service">Customer Service</string>
    <string name="we_will_respond_within_24_hours">We will respond within</string>
    <string name="we_will_respond_within_24_hours_">24 hours</string>
    <string name="the_deposit_process_takes_from_5_minutes_to_2_business_days_depending_on_the_bank_from_which_the_transfer_was_made_from_">The deposit process takes from 5 minutes to 2 business days.</string>
    <string name="go_to_my_wallet">Go to my wallet</string>
</resources>