<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".bird.ui.auth.UpdatePasswordActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <android.textview.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                app:font_name="@string/sfdiaply_bold" />

            <android.textview.CustomTextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@android:color/transparent"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                app:font_name="@string/sftext_regular" />

            <android.edittext.CustomEditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/security_code"
                android:imeOptions="actionDone"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp"
                app:font_name="@string/sfdiaply_regular"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <android.textview.CustomTextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/black_rounded_corner"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:font_name="@string/sftext_bold" />
    </LinearLayout>
</layout>