<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        card_view:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.textview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/add_cvv"
                android:textSize="@dimen/_14sdp"
                app:font_name="@string/sftext_bold" />

            <android.textview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/require_cvv_to_payment"
                android:textSize="@dimen/_12sdp"
                app:font_name="@string/sftext_regular" />

            <EditText
                android:id="@+id/etCvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints="@string/enter_cvv"
                android:background="@drawable/gray_rounded_corner_10"
                android:hint="@string/enter_cvv"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <android.textview.CustomTextView
                android:id="@+id/tvCvvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:text="@string/please_enter_cvv"
                android:textColor="@color/red"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone"
                app:font_name="@string/sftext_regular" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.button.CustomButton
                    android:id="@+id/btn_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_full_dark"
                    android:textSize="@dimen/_12sdp"
                    app:font_name="@string/sftext_semibold" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <android.button.CustomButton
                    android:id="@+id/btn_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_full_dark"
                    android:textSize="@dimen/_12sdp"
                    app:font_name="@string/sftext_semibold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>