<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/dialog_round_corner_bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingTop="@dimen/_35sdp"
        android:paddingRight="@dimen/_35sdp"
        android:paddingBottom="@dimen/_10sdp">

        <android.textview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/release_payment"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:font_name="@string/sfdiaply_bold" />

        <android.textview.CustomTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:text="@string/release_payment_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:font_name="@string/sftext_regular" />

        <android.textview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:text="@string/once_payment_is_released_payment_is_non_refundable"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:font_name="@string/sftext_regular" />

        <RelativeLayout
            android:id="@+id/rl_release_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/green_button_bg_20"
            android:padding="@dimen/_8sdp">

            <android.textview.CustomTextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_and_pay"
                android:layout_marginStart="@dimen/_7sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:font_name="@string/sftext_semibold"
                tools:ignore="RelativeOverlap" />

            <android.textview.CustomTextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:font_name="@string/sftext_regular"
                tools:ignore="RelativeOverlap" />

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:visibility="gone"
                app:cpbStyle="@style/CircularProgressBar"
                app:cpb_color="@color/white"
                app:cpb_colors="@array/progressColor"
                app:cpb_max_sweep_angle="300"
                app:cpb_min_sweep_angle="10"
                app:cpb_rotation_speed="1.0"
                app:cpb_stroke_width="@dimen/_2sdp"
                app:cpb_sweep_speed="1.0" />
        </RelativeLayout>

        <android.textview.CustomTextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/red_dark"
            android:textSize="@dimen/_13sdp"
            app:font_name="@string/sftext_bold" />
    </LinearLayout>
</layout>