<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_2sdp">

        <ImageView
            android:id="@+id/img_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/close_red" />

        <android.textview.CustomTextView
            android:id="@+id/tv_skill_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/my_skills"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:font_name="@string/sftext_regular" />
    </LinearLayout>
</layout>